2008-06-26  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/exmpp.hrl: Add server dialback namespace.

	* src/core/exmpp_xml.erl: Add function declare_ns_here/3 to declare
	additionnal namespaces in an element. Add function
	is_ns_declared_here/2 to known if a specific namespace is declared an
	element.

	* src/core/exmpp_stream.erl: Add a function set_dialback_support/1 to
	add server dialback namespace to a stream opening.
	(opening, opening_reply): Accept 'undefined' as the
	receiving/initiating entity: no 'to' or 'from' will be added to the
	opening.

2008-06-25  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_stanza.erl: Add functions to remove the sender and
	the recipient.

2008-06-24  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_jid.erl: Remove the function to_ejabberd_short_jid/1.
	This is really an internal format and it doesn't belong to exmpp.

	* src/core/exmpp_iq.erl: Remove the function to_ejabberd_iq/1. As for
	to_ejabberd_short_jid, this is an internal format and ejabberd's jlib
	module is best suited for this purpose.

	* include/exmpp.hrl: Add a macro to test JIDs in guard expressions.

	* src/core/exmpp_stanza.erl: The functions that set the sender and the
	recipient now accept #jid as an argument.

	* src/server/exmpp_server_privacy.erl,
	src/client/exmpp_client_privacy.erl, src/Makefile.am,
	src/Emakefile.in, ebin/Makefile.am, ebin/exmpp.app.in,
	doc/Makefile.am: Add modules to read and create IQ for privacy list
	management.

	* src/core/exmpp_stream.erl: Add the function opening_reply/3 which is
	the same as opening_reply/2 but takes a language in 3rd argument.

	* src/core/exmpp_xml.erl (set_cdata_in_list): Accept atoms and
	integers as character data. The function converts them to binary.

	* src/core/exmpp_presence.erl: Add functions to simply create presence
	stanza. Add functions to change show, status or priority values. The
	API is not frozen.
