@@ -7,11 +7,15 @@
 	is_ns_declared_here/2 to known if a specific namespace is declared an
 	element.
 
-	* src/core/exmpp_stream.erl: Add a function set_dialback_support/1 to
+	* src/core/exmpp_stream.erl: Add function set_dialback_support/1 to
 	add server dialback namespace to a stream opening.
 	(opening, opening_reply): Accept 'undefined' as the
 	receiving/initiating entity: no 'to' or 'from' will be added to the
 	opening.
+
+	* src/core/exmpp_stanza.erl: Add function reply_without_content/1 to
+	prepare a reply to a stanza without its original content. Fix
+	in the documentation.
 
 2008-06-25  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
